# gigpanel

./: pyproject.toml  requirements.txt
client/: docwidget.py  gigpanel.py  midibox.py
gigpanel/: __main__.py  config-example.yaml  config.yaml  docwidget.py  gigpanel.py  gposc.py  gposcclient.py  playlist.py  qjackctl_patchbay.xml  requirements.txt  window.py
gigpanel/widgets/: __init__.py  docwidget.py  hidable_tabpanel.py  playlist.py  songlist.py  tempo.py
server/: config.yaml  playlist.py
server/static/: bootstrap-darkly.min.css
